Added credit state, you'll need to add a credits screen bmp in Menu/Credits/Credits.bmp 1.04! XD

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClCompile Include="GameStates\ControlScreenState.cpp">
       <Filter>Source Files\GameStates</Filter>
     </ClCompile>
+    <ClCompile Include="GameStates\CreditState.cpp">
+      <Filter>Source Files\GameStates</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\XboxController.h">
@@ -399,6 +402,9 @@
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
     <ClInclude Include="GameStates\ControlScreenState.h">
+      <Filter>Header Files\GameStates</Filter>
+    </ClInclude>
+    <ClInclude Include="GameStates\CreditState.h">
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
   </ItemGroup>
